--- a/index.css
+++ b/index.css
@@ -120,10 +120,10 @@ a{
   display: inline-block;
 }
 .header-first{
-  width: 26.38888%;
+  width: 190px;
 }
 .header-last{
-  width: 13.88888%;
+  width: 100px;
   margin-left: 90px;
 }
 .other-mes-title{
