--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ a{
 #content
 {
   width: 720px;
-  height:auto;
+  height:1600px;
 /*  border: solid 1px #ADADAD; */
   background-color: #f7f7f7;
   margin: 0 auto;
@@ -78,7 +78,6 @@ a{
 {
   height: 120px;
   width: 100%;
- /* font-size: 14px;*/
   position: relative;
 }
 .mes-detail ul{
@@ -109,7 +108,6 @@ a{
 }
 .other-mes{
   width: 100%;
- /* font-size: 14px;*/
 }
 .other-mes-header{
   width: 100%;
