--- a/index.css
+++ b/index.css
@@ -97,10 +97,10 @@ a{
   top: 0;
   right: 0;
   width: 95px;
-  height: 125px;
+  height: 128px;
 }
 #photo img{
-  width: 95px;
+  width: 13.12%;
   height: 128px;
 }
 .other-mes{
